victory implemented. game logic complete. just needs some extra spice.
AKA: need to reset game.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
     </table>
 </div>
 <div>
+    <!--learn how lists work-->
     <p>Output:</p>
-    <p id="output"></p>
+    <ul id="outputList">
+        <li></li>
+    </ul>
 </div>
 </body>
 </html>
