--- a/index.html
+++ b/index.html
@@ -7,28 +7,52 @@
 </head>
 <body>
 <h1>TicTacToe</h1>
+<div id="tally">
+    <script src="js/tally.js"></script>
+    <table>
+        <tr>
+            <th onclick="tally(1)">
+                <div>
+                    <label>Player One's Name:</label>
+                    <input type="text" name="playerOne" title="player one">
+                </div>
+                <div style="clear:both; color:red;">
+                    <label id="1">Points:</label>
+                </div>
+            </th>
+            <th onclick="tally(2)">
+                <div>
+                    <label>Player Two's Name:</label>
+                    <input type="text" name="playerTwo" title="player two">
+                </div>
+                <div style="clear:both; color:red;">
+                    <label id="2">Points:</label>
+                </div>
+            </th>
+        </tr>
+    </table>
+</div>
 <div id="gameArea">
     <script src="js/main.js"></script>
     <table>
-    <tr>
-        <th id="0,0" onclick="handleClick(0, 0)"></th>
-        <th id="0,1" onclick="handleClick(0, 1)"></th>
-        <th id="0,2" onclick="handleClick(0, 2)"></th>
+    <tr class="box">
+        <th class="box" id="0,0" onclick="handleClick(0, 0)"></th>
+        <th class="box" id="0,1" onclick="handleClick(0, 1)"></th>
+        <th class="box" id="0,2" onclick="handleClick(0, 2)"></th>
     </tr>
-    <tr>
-        <th id="1,0" onclick="handleClick(1, 0)"></th>
-        <th id="1,1" onclick="handleClick(1, 1)"></th>
-        <th id="1,2" onclick="handleClick(1, 2)"></th>
+    <tr class="box">
+        <th class="box" id="1,0" onclick="handleClick(1, 0)"></th>
+        <th class="box" id="1,1" onclick="handleClick(1, 1)"></th>
+        <th class="box" id="1,2" onclick="handleClick(1, 2)"></th>
     </tr>
-    <tr>
-        <th id="2,0" onclick="handleClick(2, 0)"></th>
-        <th id="2,1" onclick="handleClick(2, 1)"></th>
-        <th id="2,2" onclick="handleClick(2, 2)"></th>
+    <tr class="box">
+        <th class="box" id="2,0" onclick="handleClick(2, 0)"></th>
+        <th class="box" id="2,1" onclick="handleClick(2, 1)"></th>
+        <th class="box" id="2,2" onclick="handleClick(2, 2)"></th>
     </tr>
     </table>
 </div>
 <div>
-    <!--learn how lists work-->
     <p>Output:</p>
     <ul id="outputList">
         <li></li>
